--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "bad-words": "^3.0.4",
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
-  "main": "src/index.js"
 }
